--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "cheerio": "^1.0.0-rc.10",
+    "fs": "0.0.1-security",
     "js-cookie": "^3.0.1",
     "pretty": "^2.0.0",
     "react": "^17.0.2",
