--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.15",
     "per-env": "^1.0.2",
     "pg": "^8.7.1",
     "sequelize": "^6.6.5",
