--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,6 @@
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "express-validator": "^6.12.1",
-    "faker": "^6.6.6",
     "helmet": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
@@ -33,6 +32,7 @@
     "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.0.0",
     "dotenv-cli": "^5.0.0"
   }
 }
